[tool.poetry]
name = "e4e-deduplication"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "e4e_deduplication"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
